packages/web-core/src/lib/blockParser/pegParser.js
// Generated by Peggy 1.2.0.
//
// https://peggyjs.org/

'use strict';

function peg$subclass(child, parent) {
  function C() {
    this.constructor = child;
  }
  C.prototype = parent.prototype;
  child.prototype = new C();
}

function peg$SyntaxError(message, expected, found, location) {
  var self = Error.call(this, message);
  if (Object.setPrototypeOf) {
    Object.setPrototypeOf(self, peg$SyntaxError.prototype);
  }
  self.expected = expected;
  self.found = found;
  self.location = location;
  self.name = 'SyntaxError';
  return self;
}

peg$subclass(peg$SyntaxError, Error);

function peg$padEnd(str, targetLength, padString) {
  padString = padString || ' ';
  if (str.length > targetLength) {
    return str;
  }
  targetLength -= str.length;
  padString += padString.repeat(targetLength);
  return str + padString.slice(0, targetLength);
}

peg$SyntaxError.prototype.format = function (sources) {
  var str = 'Error: ' + this.message;
  if (this.location) {
    var src = null;
    var k;
    for (k = 0; k < sources.length; k++) {
      if (sources[k].source === this.location.source) {
        src = sources[k].text.split(/\r\n|\n|\r/g);
        break;
      }
    }
    var s = this.location.start;
    var loc = this.location.source + ':' + s.line + ':' + s.column;
    if (src) {
      var e = this.location.end;
      var filler = peg$padEnd('', s.line.toString().length);
      var line = src[s.line - 1];
      var last = s.line === e.line ? e.column : line.length + 1;
      str +=
        '\n --> ' +
        loc +
        '\n' +
        filler +
        ' |\n' +
        s.line +
        ' | ' +
        line +
        '\n' +
        filler +
        ' | ' +
        peg$padEnd('', s.column - 1) +
        peg$padEnd('', last - s.column, '^');
    } else {
      str += '\n at ' + loc;
    }
  }
  return str;
};

peg$SyntaxError.buildMessage = function (expected, found) {
  var DESCRIBE_EXPECTATION_FNS = {
    literal: function (expectation) {
      return '"' + literalEscape(expectation.text) + '"';
    },

    class: function (expectation) {
      var escapedParts = expectation.parts.map(function (part) {
        return Array.isArray(part)
          ? classEscape(part[0]) + '-' + classEscape(part[1])
          : classEscape(part);
      });

      return '[' + (expectation.inverted ? '^' : '') + escapedParts + ']';
    },

    any: function () {
      return 'any character';
    },

    end: function () {
      return 'end of input';
    },

    other: function (expectation) {
      return expectation.description;
    },
  };

  function hex(ch) {
    return ch.charCodeAt(0).toString(16).toUpperCase();
  }

  function literalEscape(s) {
    return s
      .replace(/\\/g, '\\\\')
      .replace(/"/g, '\\"')
      .replace(/\0/g, '\\0')
      .replace(/\t/g, '\\t')
      .replace(/\n/g, '\\n')
      .replace(/\r/g, '\\r')
      .replace(/[\x00-\x0F]/g, function (ch) {
        return '\\x0' + hex(ch);
      })
      .replace(/[\x10-\x1F\x7F-\x9F]/g, function (ch) {
        return '\\x' + hex(ch);
      });
  }

  function classEscape(s) {
    return s
      .replace(/\\/g, '\\\\')
      .replace(/\]/g, '\\]')
      .replace(/\^/g, '\\^')
      .replace(/-/g, '\\-')
      .replace(/\0/g, '\\0')
      .replace(/\t/g, '\\t')
      .replace(/\n/g, '\\n')
      .replace(/\r/g, '\\r')
      .replace(/[\x00-\x0F]/g, function (ch) {
        return '\\x0' + hex(ch);
      })
      .replace(/[\x10-\x1F\x7F-\x9F]/g, function (ch) {
        return '\\x' + hex(ch);
      });
  }

  function describeExpectation(expectation) {
    return DESCRIBE_EXPECTATION_FNS[expectation.type](expectation);
  }

  function describeExpected(expected) {
    var descriptions = expected.map(describeExpectation);
    var i, j;

    descriptions.sort();

    if (descriptions.length > 0) {
      for (i = 1, j = 1; i < descriptions.length; i++) {
        if (descriptions[i - 1] !== descriptions[i]) {
          descriptions[j] = descriptions[i];
          j++;
        }
      }
      descriptions.length = j;
    }

    switch (descriptions.length) {
      case 1:
        return descriptions[0];

      case 2:
        return descriptions[0] + ' or ' + descriptions[1];

      default:
        return (
          descriptions.slice(0, -1).join(', ') +
          ', or ' +
          descriptions[descriptions.length - 1]
        );
    }
  }

  function describeFound(found) {
    return found ? '"' + literalEscape(found) + '"' : 'end of input';
  }

  return (
    'Expected ' +
    describeExpected(expected) +
    ' but ' +
    describeFound(found) +
    ' found.'
  );
};

function peg$parse(input, options) {
  options = options !== undefined ? options : {};

  var peg$FAILED = {};
  var peg$source = options.grammarSource;

  var peg$startRuleFunctions = { Expression: peg$parseExpression };
  var peg$startRuleFunction = peg$parseExpression;

  var peg$c0 = '[[';
  var peg$c1 = ']]';
  var peg$c2 = '((';
  var peg$c3 = '))';
  var peg$c4 = '#[[';
  var peg$c5 = '#';
  var peg$c6 = '**';
  var peg$c7 = '__';
  var peg$c8 = '^^';
  var peg$c9 = '> ';
  var peg$c10 = '###';
  var peg$c11 = '##';
  var peg$c12 = '`';
  var peg$c13 = '```';
  var peg$c14 = '![';
  var peg$c15 = '](';
  var peg$c16 = ')';
  var peg$c17 = ' =';
  var peg$c18 = 'x';
  var peg$c19 = '{{';
  var peg$c20 = ':';
  var peg$c21 = '|';
  var peg$c22 = '}}';
  var peg$c23 = '"';
  var peg$c24 = '\\';
  var peg$c25 = '\n';
  var peg$c26 = '\r\n';
  var peg$c27 = '\r';
  var peg$c28 = '\u2028';
  var peg$c29 = '\u2029';

  var peg$r0 = /^[^'\]\]']/;
  var peg$r1 = /^[^'))']/;
  var peg$r2 = /^[^' '\^'\n'\^'\r'\^'\t'\^'\f']/;
  var peg$r3 = /^[' '\n\r\t\f]/;
  var peg$r4 = /^[^'**']/;
  var peg$r5 = /^[^'__']/;
  var peg$r6 = /^[^'\^\^']/;
  var peg$r7 = /^[^`]/;
  var peg$r8 = /^[^\]]/;
  var peg$r9 = /^[^) ]/;
  var peg$r10 = /^[0-9]/;
  var peg$r11 = /^[a-zA-Z]/;
  var peg$r12 = /^[^"\\]/;
  var peg$r13 = /^["\\\/bfnrtu]/;
  var peg$r14 = /^[ \t\n\r]/;

  var peg$e0 = peg$anyExpectation();
  var peg$e1 = peg$literalExpectation('[[', false);
  var peg$e2 = peg$classExpectation(["'", ']', ']', "'"], true, false);
  var peg$e3 = peg$literalExpectation(']]', false);
  var peg$e4 = peg$literalExpectation('((', false);
  var peg$e5 = peg$classExpectation(["'", ')', ')', "'"], true, false);
  var peg$e6 = peg$literalExpectation('))', false);
  var peg$e7 = peg$literalExpectation('#[[', false);
  var peg$e8 = peg$literalExpectation('#', false);
  var peg$e9 = peg$classExpectation(
    [
      "'",
      ' ',
      "'",
      '^',
      "'",
      '\n',
      "'",
      '^',
      "'",
      '\r',
      "'",
      '^',
      "'",
      '\t',
      "'",
      '^',
      "'",
      '\f',
      "'",
    ],
    true,
    false,
  );
  var peg$e10 = peg$classExpectation(
    ["'", ' ', "'", '\n', '\r', '\t', '\f'],
    false,
    false,
  );
  var peg$e11 = peg$literalExpectation('**', false);
  var peg$e12 = peg$classExpectation(["'", '*', '*', "'"], true, false);
  var peg$e13 = peg$literalExpectation('__', false);
  var peg$e14 = peg$classExpectation(["'", '_', '_', "'"], true, false);
  var peg$e15 = peg$literalExpectation('^^', false);
  var peg$e16 = peg$classExpectation(["'", '^', '^', "'"], true, false);
  var peg$e17 = peg$literalExpectation('> ', false);
  var peg$e18 = peg$literalExpectation('###', false);
  var peg$e19 = peg$literalExpectation('##', false);
  var peg$e20 = peg$literalExpectation('`', false);
  var peg$e21 = peg$classExpectation(['`'], true, false);
  var peg$e22 = peg$literalExpectation('```', false);
  var peg$e23 = peg$literalExpectation('![', false);
  var peg$e24 = peg$classExpectation([']'], true, false);
  var peg$e25 = peg$literalExpectation('](', false);
  var peg$e26 = peg$classExpectation([')', ' '], true, false);
  var peg$e27 = peg$literalExpectation(')', false);
  var peg$e28 = peg$literalExpectation(' =', false);
  var peg$e29 = peg$classExpectation([['0', '9']], false, false);
  var peg$e30 = peg$literalExpectation('x', false);
  var peg$e31 = peg$literalExpectation('{{', false);
  var peg$e32 = peg$literalExpectation(':', false);
  var peg$e33 = peg$classExpectation(
    [
      ['a', 'z'],
      ['A', 'Z'],
    ],
    false,
    false,
  );
  var peg$e34 = peg$literalExpectation('|', false);
  var peg$e35 = peg$literalExpectation('}}', false);
  var peg$e36 = peg$literalExpectation('"', false);
  var peg$e37 = peg$classExpectation(['"', '\\'], true, false);
  var peg$e38 = peg$literalExpectation('\\', false);
  var peg$e39 = peg$classExpectation(
    ['"', '\\', '/', 'b', 'f', 'n', 'r', 't', 'u'],
    false,
    false,
  );
  var peg$e40 = peg$otherExpectation('whitespace');
  var peg$e41 = peg$classExpectation([' ', '\t', '\n', '\r'], false, false);
  var peg$e42 = peg$otherExpectation('end of line');
  var peg$e43 = peg$literalExpectation('\n', false);
  var peg$e44 = peg$literalExpectation('\r\n', false);
  var peg$e45 = peg$literalExpectation('\r', false);
  var peg$e46 = peg$literalExpectation('\u2028', false);
  var peg$e47 = peg$literalExpectation('\u2029', false);

  var peg$f0 = function (result) {
    return result[0]
      ? [...(Array.isArray(result[0]) ? result[0] : [result[0]]), ...result[1]]
      : result[1];
  };
  var peg$f1 = function (result) {
    const loc = location();

    return joinChars(result.flat(), loc.start.offset);
  };
  var peg$f2 = function (content) {
    const loc = location();

    return {
      id: options.generateId(),
      type: 'noteBlockRef',
      content: content,
      offsetStart: loc.start.offset,
      offsetEnd: loc.end.offset,
    };
  };
  var peg$f3 = function (content) {
    const loc = location();

    return {
      id: options.generateId(),
      type: 'textBlockRef',
      content: content,
      offsetStart: loc.start.offset,
      offsetEnd: loc.end.offset,
    };
  };
  var peg$f4 = function (content) {
    const loc = location();

    return {
      id: options.generateId(),
      type: 'tag',
      ref: content,
      content: content,
      offsetStart: loc.start.offset,
      offsetEnd: loc.end.offset,
      withBrackets: true,
    };
  };
  var peg$f5 = function (content) {
    const loc = location();

    return {
      id: options.generateId(),
      type: 'tag',
      ref: content,
      content: content,
      offsetStart: loc.start.offset,
      offsetEnd: loc.end.offset,
      withBrackets: false,
    };
  };
  var peg$f6 = function (before, tag) {
    return [before, tag];
  };
  var peg$f7 = function (content) {
    const loc = location();

    return {
      id: options.generateId(),
      type: 'bold',
      content: joinChars(content, loc.start.offset + 2),
      offsetStart: loc.start.offset,
      offsetEnd: loc.end.offset,
    };
  };
  var peg$f8 = function (content) {
    const loc = location();

    return {
      id: options.generateId(),
      type: 'italic',
      content: joinChars(content, loc.start.offset + 2),
      offsetStart: loc.start.offset,
      offsetEnd: loc.end.offset,
    };
  };
  var peg$f9 = function (content) {
    const loc = location();

    return {
      id: options.generateId(),
      type: 'highlight',
      content: joinChars(content, loc.start.offset + 2),
      offsetStart: loc.start.offset,
      offsetEnd: loc.end.offset,
    };
  };
  var peg$f10 = function (result) {
    return result.map(([token, hasEnd]) => {
      return {
        ...token,
        withTrailingEOL: hasEnd !== null,
        offsetEnd: hasEnd !== null ? token.offsetEnd + 1 : token.offsetEnd,
      };
    });
  };
  var peg$f11 = function (result) {
    return ['\n', ...result];
  };
  var peg$f12 = function (content) {
    const loc = location();

    return {
      id: options.generateId(),
      type: 'quote',
      offsetStart: loc.start.offset,
      offsetEnd: loc.end.offset,
      content: joinChars(
        content.map(([, val]) => val),
        loc.start.offset + 2,
      ),
    };
  };
  var peg$f13 = function (depth, content) {
    const loc = location();

    return {
      id: options.generateId(),
      type: 'head',
      depth: depth.length,
      offsetStart: loc.start.offset,
      offsetEnd: loc.end.offset,
      content: joinChars(
        content.map(([, val]) => val),
        loc.start.offset + depth.length,
      ),
    };
  };
  var peg$f14 = function (content) {
    const loc = location();

    return {
      id: options.generateId(),
      type: 'inlineCode',
      content: content,
      offsetStart: loc.start.offset,
      offsetEnd: loc.end.offset,
    };
  };
  var peg$f15 = function (content, ending) {
    const loc = location();

    return {
      id: options.generateId(),
      type: 'codeBlock',
      content: content.map(([, v]) => v).join(''),
      offsetStart: loc.start.offset,
      offsetEnd: loc.end.offset,
      withTrailingEOL: ending.length === 2,
    };
  };
  var peg$f16 = function (title, url, size) {
    const loc = location();

    return {
      id: options.generateId(),
      type: 'image',
      title,
      url,
      width: (size && size.width) || undefined,
      height: (size && size.height) || undefined,
      offsetStart: loc.start.offset,
      offsetEnd: loc.end.offset,
    };
  };
  var peg$f17 = function (width, height) {
    return {
      width: parseInt(width.join(''), 10) || undefined,
      height: parseInt(height.join(''), 10) || undefined,
    };
  };
  var peg$f18 = function (templateType, content) {
    const loc = location();

    return {
      type: 'template',
      templateType: templateType.map(([, v]) => v).join(''),
      content: content
        .map((data) => (typeof data === 'string' ? data : data[1]))
        .join(''),
      offsetStart: loc.start.offset,
      offsetEnd: loc.end.offset,
    };
  };
  var peg$f19 = function (string) {
    return '"' + string.join('') + '"';
  };
  var peg$f20 = function (character) {
    return '\\' + character;
  };

  var peg$currPos = 0;
  var peg$savedPos = 0;
  var peg$posDetailsCache = [{ line: 1, column: 1 }];
  var peg$maxFailPos = 0;
  var peg$maxFailExpected = [];
  var peg$silentFails = 0;

  var peg$resultsCache = {};

  var peg$result;

  if ('startRule' in options) {
    if (!(options.startRule in peg$startRuleFunctions)) {
      throw new Error(
        'Can\'t start parsing from rule "' + options.startRule + '".',
      );
    }

    peg$startRuleFunction = peg$startRuleFunctions[options.startRule];
  }

  function text() {
    return input.substring(peg$savedPos, peg$currPos);
  }

  function offset() {
    return peg$savedPos;
  }

  function range() {
    return {
      source: peg$source,
      start: peg$savedPos,
      end: peg$currPos,
    };
  }

  function location() {
    return peg$computeLocation(peg$savedPos, peg$currPos);
  }

  function expected(description, location) {
    location =
      location !== undefined
        ? location
        : peg$computeLocation(peg$savedPos, peg$currPos);

    throw peg$buildStructuredError(
      [peg$otherExpectation(description)],
      input.substring(peg$savedPos, peg$currPos),
      location,
    );
  }

  function error(message, location) {
    location =
      location !== undefined
        ? location
        : peg$computeLocation(peg$savedPos, peg$currPos);

    throw peg$buildSimpleError(message, location);
  }

  function peg$literalExpectation(text, ignoreCase) {
    return { type: 'literal', text: text, ignoreCase: ignoreCase };
  }

  function peg$classExpectation(parts, inverted, ignoreCase) {
    return {
      type: 'class',
      parts: parts,
      inverted: inverted,
      ignoreCase: ignoreCase,
    };
  }

  function peg$anyExpectation() {
    return { type: 'any' };
  }

  function peg$endExpectation() {
    return { type: 'end' };
  }

  function peg$otherExpectation(description) {
    return { type: 'other', description: description };
  }

  function peg$computePosDetails(pos) {
    var details = peg$posDetailsCache[pos];
    var p;

    if (details) {
      return details;
    } else {
      p = pos - 1;
      while (!peg$posDetailsCache[p]) {
        p--;
      }

      details = peg$posDetailsCache[p];
      details = {
        line: details.line,
        column: details.column,
      };

      while (p < pos) {
        if (input.charCodeAt(p) === 10) {
          details.line++;
          details.column = 1;
        } else {
          details.column++;
        }

        p++;
      }

      peg$posDetailsCache[pos] = details;

      return details;
    }
  }

  function peg$computeLocation(startPos, endPos) {
    var startPosDetails = peg$computePosDetails(startPos);
    var endPosDetails = peg$computePosDetails(endPos);

    return {
      source: peg$source,
      start: {
        offset: startPos,
        line: startPosDetails.line,
        column: startPosDetails.column,
      },
      end: {
        offset: endPos,
        line: endPosDetails.line,
        column: endPosDetails.column,
      },
    };
  }

  function peg$fail(expected) {
    if (peg$currPos < peg$maxFailPos) {
      return;
    }

    if (peg$currPos > peg$maxFailPos) {
      peg$maxFailPos = peg$currPos;
      peg$maxFailExpected = [];
    }

    peg$maxFailExpected.push(expected);
  }

  function peg$buildSimpleError(message, location) {
    return new peg$SyntaxError(message, null, null, location);
  }

  function peg$buildStructuredError(expected, found, location) {
    return new peg$SyntaxError(
      peg$SyntaxError.buildMessage(expected, found),
      expected,
      found,
      location,
    );
  }

  function peg$parseExpression() {
    var s0, s1, s2, s3;

    var key = peg$currPos * 24 + 0;
    var cached = peg$resultsCache[key];

    if (cached) {
      peg$currPos = cached.nextPos;

      return cached.result;
    }

    s0 = peg$currPos;
    s1 = peg$currPos;
    s2 = peg$parseOneLineTokens();
    if (s2 === peg$FAILED) {
      s2 = peg$parseTagWithBrackets();
      if (s2 === peg$FAILED) {
        s2 = peg$parseTag();
      }
    }
    if (s2 === peg$FAILED) {
      s2 = null;
    }
    s3 = peg$parseData();
    s2 = [s2, s3];
    s1 = s2;
    peg$savedPos = s0;
    s1 = peg$f0(s1);
    s0 = s1;

    peg$resultsCache[key] = { nextPos: peg$currPos, result: s0 };

    return s0;
  }

  function peg$parseData() {
    var s0, s1, s2;

    var key = peg$currPos * 24 + 1;
    var cached = peg$resultsCache[key];

    if (cached) {
      peg$currPos = cached.nextPos;

      return cached.result;
    }

    s0 = peg$currPos;
    s1 = [];
    s2 = peg$parseToken();
    if (s2 === peg$FAILED) {
      if (input.length > peg$currPos) {
        s2 = input.charAt(peg$currPos);
        peg$currPos++;
      } else {
        s2 = peg$FAILED;
        if (peg$silentFails === 0) {
          peg$fail(peg$e0);
        }
      }
    }
    while (s2 !== peg$FAILED) {
      s1.push(s2);
      s2 = peg$parseToken();
      if (s2 === peg$FAILED) {
        if (input.length > peg$currPos) {
          s2 = input.charAt(peg$currPos);
          peg$currPos++;
        } else {
          s2 = peg$FAILED;
          if (peg$silentFails === 0) {
            peg$fail(peg$e0);
          }
        }
      }
    }
    peg$savedPos = s0;
    s1 = peg$f1(s1);
    s0 = s1;

    peg$resultsCache[key] = { nextPos: peg$currPos, result: s0 };

    return s0;
  }

  function peg$parseToken() {
    var s0;

    var key = peg$currPos * 24 + 2;
    var cached = peg$resultsCache[key];

    if (cached) {
      peg$currPos = cached.nextPos;

      return cached.result;
    }

    s0 = peg$parseEOLOneLineTokens();
    if (s0 === peg$FAILED) {
      s0 = peg$parseTemplate();
      if (s0 === peg$FAILED) {
        s0 = peg$parseSpaceBeforeTag();
        if (s0 === peg$FAILED) {
          s0 = peg$parseBold();
          if (s0 === peg$FAILED) {
            s0 = peg$parseItalic();
            if (s0 === peg$FAILED) {
              s0 = peg$parseHighlight();
              if (s0 === peg$FAILED) {
                s0 = peg$parseCodeBlock();
                if (s0 === peg$FAILED) {
                  s0 = peg$parseInlineCode();
                  if (s0 === peg$FAILED) {
                    s0 = peg$parseNoteBlockRef();
                    if (s0 === peg$FAILED) {
                      s0 = peg$parseTextBlockRef();
                      if (s0 === peg$FAILED) {
                        s0 = peg$parseImage();
                      }
                    }
                  }
                }
              }
            }
          }
        }
      }
    }

    peg$resultsCache[key] = { nextPos: peg$currPos, result: s0 };

    return s0;
  }

  function peg$parseNoteBlockRef() {
    var s0, s1, s2, s3, s4;

    var key = peg$currPos * 24 + 3;
    var cached = peg$resultsCache[key];

    if (cached) {
      peg$currPos = cached.nextPos;

      return cached.result;
    }

    s0 = peg$currPos;
    if (input.substr(peg$currPos, 2) === peg$c0) {
      s1 = peg$c0;
      peg$currPos += 2;
    } else {
      s1 = peg$FAILED;
      if (peg$silentFails === 0) {
        peg$fail(peg$e1);
      }
    }
    if (s1 !== peg$FAILED) {
      s2 = peg$currPos;
      s3 = [];
      if (peg$r0.test(input.charAt(peg$currPos))) {
        s4 = input.charAt(peg$currPos);
        peg$currPos++;
      } else {
        s4 = peg$FAILED;
        if (peg$silentFails === 0) {
          peg$fail(peg$e2);
        }
      }
      if (s4 !== peg$FAILED) {
        while (s4 !== peg$FAILED) {
          s3.push(s4);
          if (peg$r0.test(input.charAt(peg$currPos))) {
            s4 = input.charAt(peg$currPos);
            peg$currPos++;
          } else {
            s4 = peg$FAILED;
            if (peg$silentFails === 0) {
              peg$fail(peg$e2);
            }
          }
        }
      } else {
        s3 = peg$FAILED;
      }
      if (s3 !== peg$FAILED) {
        s2 = input.substring(s2, peg$currPos);
      } else {
        s2 = s3;
      }
      if (s2 !== peg$FAILED) {
        if (input.substr(peg$currPos, 2) === peg$c1) {
          s3 = peg$c1;
          peg$currPos += 2;
        } else {
          s3 = peg$FAILED;
          if (peg$silentFails === 0) {
            peg$fail(peg$e3);
          }
        }
        if (s3 !== peg$FAILED) {
          peg$savedPos = s0;
          s0 = peg$f2(s2);
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    peg$resultsCache[key] = { nextPos: peg$currPos, result: s0 };

    return s0;
  }

  function peg$parseTextBlockRef() {
    var s0, s1, s2, s3, s4;

    var key = peg$currPos * 24 + 4;
    var cached = peg$resultsCache[key];

    if (cached) {
      peg$currPos = cached.nextPos;

      return cached.result;
    }

    s0 = peg$currPos;
    if (input.substr(peg$currPos, 2) === peg$c2) {
      s1 = peg$c2;
      peg$currPos += 2;
    } else {
      s1 = peg$FAILED;
      if (peg$silentFails === 0) {
        peg$fail(peg$e4);
      }
    }
    if (s1 !== peg$FAILED) {
      s2 = peg$currPos;
      s3 = [];
      if (peg$r1.test(input.charAt(peg$currPos))) {
        s4 = input.charAt(peg$currPos);
        peg$currPos++;
      } else {
        s4 = peg$FAILED;
        if (peg$silentFails === 0) {
          peg$fail(peg$e5);
        }
      }
      if (s4 !== peg$FAILED) {
        while (s4 !== peg$FAILED) {
          s3.push(s4);
          if (peg$r1.test(input.charAt(peg$currPos))) {
            s4 = input.charAt(peg$currPos);
            peg$currPos++;
          } else {
            s4 = peg$FAILED;
            if (peg$silentFails === 0) {
              peg$fail(peg$e5);
            }
          }
        }
      } else {
        s3 = peg$FAILED;
      }
      if (s3 !== peg$FAILED) {
        s2 = input.substring(s2, peg$currPos);
      } else {
        s2 = s3;
      }
      if (s2 !== peg$FAILED) {
        if (input.substr(peg$currPos, 2) === peg$c3) {
          s3 = peg$c3;
          peg$currPos += 2;
        } else {
          s3 = peg$FAILED;
          if (peg$silentFails === 0) {
            peg$fail(peg$e6);
          }
        }
        if (s3 !== peg$FAILED) {
          peg$savedPos = s0;
          s0 = peg$f3(s2);
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    peg$resultsCache[key] = { nextPos: peg$currPos, result: s0 };

    return s0;
  }

  function peg$parseTagWithBrackets() {
    var s0, s1, s2, s3, s4;

    var key = peg$currPos * 24 + 5;
    var cached = peg$resultsCache[key];

    if (cached) {
      peg$currPos = cached.nextPos;

      return cached.result;
    }

    s0 = peg$currPos;
    if (input.substr(peg$currPos, 3) === peg$c4) {
      s1 = peg$c4;
      peg$currPos += 3;
    } else {
      s1 = peg$FAILED;
      if (peg$silentFails === 0) {
        peg$fail(peg$e7);
      }
    }
    if (s1 !== peg$FAILED) {
      s2 = peg$currPos;
      s3 = [];
      if (peg$r0.test(input.charAt(peg$currPos))) {
        s4 = input.charAt(peg$currPos);
        peg$currPos++;
      } else {
        s4 = peg$FAILED;
        if (peg$silentFails === 0) {
          peg$fail(peg$e2);
        }
      }
      if (s4 !== peg$FAILED) {
        while (s4 !== peg$FAILED) {
          s3.push(s4);
          if (peg$r0.test(input.charAt(peg$currPos))) {
            s4 = input.charAt(peg$currPos);
            peg$currPos++;
          } else {
            s4 = peg$FAILED;
            if (peg$silentFails === 0) {
              peg$fail(peg$e2);
            }
          }
        }
      } else {
        s3 = peg$FAILED;
      }
      if (s3 !== peg$FAILED) {
        s2 = input.substring(s2, peg$currPos);
      } else {
        s2 = s3;
      }
      if (s2 !== peg$FAILED) {
        if (input.substr(peg$currPos, 2) === peg$c1) {
          s3 = peg$c1;
          peg$currPos += 2;
        } else {
          s3 = peg$FAILED;
          if (peg$silentFails === 0) {
            peg$fail(peg$e3);
          }
        }
        if (s3 !== peg$FAILED) {
          peg$savedPos = s0;
          s0 = peg$f4(s2);
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    peg$resultsCache[key] = { nextPos: peg$currPos, result: s0 };

    return s0;
  }

  function peg$parseTag() {
    var s0, s1, s2, s3, s4;

    var key = peg$currPos * 24 + 6;
    var cached = peg$resultsCache[key];

    if (cached) {
      peg$currPos = cached.nextPos;

      return cached.result;
    }
